force-app/main/default/objects/IM_Customer_Account__c/IM_Customer_Account__c.object-meta.xml
<CustomObject>
    <description>This object represents Customer Account, Billing Account and Inventory Account in BI and Siebel</description>
    <label>Customer Account</label>
    <nameField>
        <label>Customer Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>