force-app/main/default/objects/IM_Customer_Account__c/fields/Account_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Registration_Number__c</fullName>
    <label>Account Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>