force-app/main/default/objects/IM_Customer_Account__c/fields/Acquisition_Code__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Code__c</fullName>
    <label>Acquisition Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>