force-app/main/default/objects/IM_Customer_Account__c/fields/Admin_Fee_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Admin_Fee_Indicator__c</fullName>
    <label>Admin Fee Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>