force-app/main/default/objects/IM_Customer_Account__c/fields/At_Risk_Assessment_Score__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Assessment_Score__c</fullName>
    <description>At Risk assessment score updated from the last modified at risk assessment related to the customer account.</description>
    <label>At Risk Assessment Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>