force-app/main/default/objects/IM_Customer_Account__c/fields/At_Risk_Category_Grouping__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Category_Grouping__c</fullName>
    <label>At Risk Category Grouping</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High Risk</fullName>
                <color>#CC0000</color>
                <label>High Risk</label>
            </value>
            <value>
                <fullName>Medium Risk</fullName>
                <color>#F3D904</color>
                <label>Medium Risk</label>
            </value>
            <value>
                <fullName>Low Risk</fullName>
                <color>#419249</color>
                <label>Low Risk</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>