force-app/main/default/objects/IM_Customer_Account__c/fields/At_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Score__c</fullName>
    <description>Pulls the value from the AT Risk Score Roll up summary field and sets the value to zero when the At Risk Status is terminated or retained.</description>
    <formula>CASE (
IM_At_Risk_Status__c,&quot;At Risk&quot;, At_Risk_Assessment_Score__c  , 
&quot;Not At Risk&quot;, At_Risk_Assessment_Score__c  ,
&quot;Resolved&quot;, At_Risk_Assessment_Score__c  , 
&quot;Unknown&quot;, At_Risk_Assessment_Score__c ,&quot;&quot;,At_Risk_Assessment_Score__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>At Risk Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>