force-app/main/default/objects/IM_Customer_Account__c/fields/At_Risk_Score_Roll_up__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Score_Roll_up__c</fullName>
    <description>At Risk Score Roll up from the AT Risk profile. This value is used to calculate the value in the AT Risk Score field that is visible to the users. 
Help Text</description>
    <label>At Risk Score Roll up</label>
    <summarizedField>At_Risk__c.At_Risk_Score__c</summarizedField>
    <summaryForeignKey>At_Risk__c.Customer_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>