force-app/main/default/objects/IM_Customer_Account__c/fields/Billing_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country_Code__c</fullName>
    <formula>Billing_Country__r.Iso31663Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Country Code</label>
    <type>Text</type>
</CustomField>