force-app/main/default/objects/IM_Customer_Account__c/fields/Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closure_Reason__c</fullName>
    <description>identical pick list field to the field used on the closure case</description>
    <inlineHelpText>Please indicate the primary reason why Iron Mountain lost this business</inlineHelpText>
    <label>Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1a - Price - Uncompetitive Pricing</fullName>
            </value>
            <value>
                <fullName>1b - Price - Unhappy with Price Increase</fullName>
            </value>
            <value>
                <fullName>1c - Price - Minimum Storage Increase (RM Only)</fullName>
            </value>
            <value>
                <fullName>2a - Program Change - Customer retrieved inventory w/o explanation</fullName>
            </value>
            <value>
                <fullName>2b - Program Change - Consolidation of data to internal systems/locations</fullName>
            </value>
            <value>
                <fullName>2c - Program Change - Moved to electronic/online/virtual solution (not Iron Mountain Digital)</fullName>
            </value>
            <value>
                <fullName>2d - Program Change - Moved to electronic/online/virtual solution (Iron Mountain Digital solution)</fullName>
            </value>
            <value>
                <fullName>2e - Program Change - Moved to in-house tape rotation</fullName>
            </value>
            <value>
                <fullName>2f - Program Change - Moved to custom in-house solution</fullName>
            </value>
            <value>
                <fullName>2g - Program Change - Lack of use / non-deployment</fullName>
            </value>
            <value>
                <fullName>2h - Program Change - Account moved out of district/service area (IM does not retain storage)</fullName>
            </value>
            <value>
                <fullName>2i - Program Change - Account moved out of district/service area (IM retains storage)</fullName>
            </value>
            <value>
                <fullName>2j - Program Change - Destruction of Material / Information no longer needs to be stored</fullName>
            </value>
            <value>
                <fullName>2k - Program Change - Moved to third party provider (IM retains)</fullName>
            </value>
            <value>
                <fullName>3a - Service Quality - Technical Issues</fullName>
            </value>
            <value>
                <fullName>3b - Service Quality - DR/Restores did not meet expectations</fullName>
            </value>
            <value>
                <fullName>3c - Service Quality - Logistical Service Issues</fullName>
            </value>
            <value>
                <fullName>3d - Service Quality - Lack of Features/Functionality</fullName>
            </value>
            <value>
                <fullName>3e - Service Quality - IM Non-responsive to / unable to resolve repeated service issues</fullName>
            </value>
            <value>
                <fullName>4a - Economic Change - Out of Business</fullName>
            </value>
            <value>
                <fullName>4b - Economic Change - Acquired</fullName>
            </value>
            <value>
                <fullName>4c - Economic Change - Bankrupt</fullName>
            </value>
            <value>
                <fullName>4d - Economic Change - Budget change</fullName>
            </value>
            <value>
                <fullName>5a - Relationship - No contact from IM recently</fullName>
            </value>
            <value>
                <fullName>5b - Relationship - Local competitor influenced decision</fullName>
            </value>
            <value>
                <fullName>5c - Relationship - Decision Maker change</fullName>
            </value>
            <value>
                <fullName>5d - Relationship - Contractual Concerns</fullName>
            </value>
            <value>
                <fullName>6a - No Reason - Customer would not share</fullName>
            </value>
            <value>
                <fullName>6b - No Reason - Unable to reach customer</fullName>
            </value>
            <value>
                <fullName>7a - IM Initiated - Account Setup in Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>