force-app/main/default/objects/IM_Customer_Account__c/fields/Contract_Link_Code__c.field-meta.xml
<CustomField>
    <fullName>Contract_Link_Code__c</fullName>
    <label>Contract Link Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>