force-app/main/default/objects/IM_Customer_Account__c/fields/Country_Parent__c.field-meta.xml
<CustomField>
    <fullName>Country_Parent__c</fullName>
    <formula>IM_Account__r.Country_Parent_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Parent</label>
    <type>Text</type>
</CustomField>