force-app/main/default/objects/IM_Customer_Account__c/fields/Current_Year_DBR_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_DBR_Revenue__c</fullName>
    <description>Invoiced revenue for Data Backup &amp; Recovery for the current calendar year.</description>
    <inlineHelpText>Invoiced revenue for Data Backup &amp; Recovery for the current calendar year.</inlineHelpText>
    <label>Current Year DBR Revenue</label>
    <summarizedField>Billings__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Billings__c.Business_Line__c</field>
        <operation>equals</operation>
        <value>Data Backup &amp; Recovery</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Billings__c.Billing_Year__c</field>
        <operation>equals</operation>
        <value>2014</value>
    </summaryFilterItems>
    <summaryForeignKey>Billings__c.Customer_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>