force-app/main/default/objects/IM_Customer_Account__c/fields/Current_Year_Total_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_Year_Total_Revenue__c</fullName>
    <description>Invoiced revenue from all business lines for the current calendar year.</description>
    <formula>Current_Year_DBR_Revenue__c + Current_Year_DMS_Revenue__c + Current_Year_Other_Revenue__c + Current_Year_RM_Revenue__c +  Current_Year_Shred_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Invoiced revenue from all business lines for the current calendar year.</inlineHelpText>
    <label>Current Year Total Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>