force-app/main/default/objects/IM_Customer_Account__c/fields/Customer_DPU__c.field-meta.xml
<CustomField>
    <fullName>Customer_DPU__c</fullName>
    <label>delete_Customer DPU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>