force-app/main/default/objects/IM_Customer_Account__c/fields/Data_Quality_Description__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Description__c</fullName>
    <formula>IF( Data_Quality_Score__c =0,&quot;All Customer Account Details Captured&quot;, &quot;Missing: &quot;
&amp;IF( LEN( IM_Account__c) = 0, &quot;Account, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF(LEN( IM_Oracle_ID__c) = 0, &quot;Oracle Finance Id, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( LEN( Name) = 0, &quot;Customer Id, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF(LEN( IM_Customer_Account_Name__c) = 0, &quot;Customer Name, &quot;,&quot;&quot;)&amp;&quot;&quot;
&amp;IF( ISPICKVAL( IM_Status__c,&quot;&quot;), &quot;Status&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data Quality Description</label>
    <type>Text</type>
</CustomField>