force-app/main/default/objects/IM_Customer_Account__c/fields/DB_R_Handling_Minimum_Indicator__c.field-meta.xml
<CustomField>
    <fullName>DB_R_Handling_Minimum_Indicator__c</fullName>
    <description>DB&amp;R Handling (Invoice Amount) Minimum Indicator</description>
    <label>Handling Minimum</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>