force-app/main/default/objects/IM_Customer_Account__c/fields/DB_R_Monthly_Transportation_Trips__c.field-meta.xml
<CustomField>
    <fullName>DB_R_Monthly_Transportation_Trips__c</fullName>
    <label>Monthly Transportation # Trips</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>