force-app/main/default/objects/IM_Customer_Account__c/fields/DB_R_Out_of_Territory_Premium__c.field-meta.xml
<CustomField>
    <fullName>DB_R_Out_of_Territory_Premium__c</fullName>
    <label>Out of Territory Premium</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>