force-app/main/default/objects/IM_Customer_Account__c/fields/DBR_Monthly_Value__c.field-meta.xml
<CustomField>
    <fullName>DBR_Monthly_Value__c</fullName>
    <description>The monthly value of the Data Backup &amp; Recovery business line.</description>
    <inlineHelpText>Current monthly revenue from billings for the Data Backup and Recovery business line.</inlineHelpText>
    <label>DBR Monthly Value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>