force-app/main/default/objects/IM_Customer_Account__c/fields/DBR_Reason_Code_4__c.field-meta.xml
<CustomField>
    <fullName>DBR_Reason_Code_4__c</fullName>
    <inlineHelpText>#4 reason attributed to why account is at risk, ranked in order of importance.</inlineHelpText>
    <label>DBR Reason Code 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>