force-app/main/default/objects/IM_Customer_Account__c/fields/DBR_Reason_Value_3__c.field-meta.xml
<CustomField>
    <fullName>DBR_Reason_Value_3__c</fullName>
    <inlineHelpText>The corresponding percentage score against the reason code</inlineHelpText>
    <label>delete_DBR Reason Value 3</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>