force-app/main/default/objects/IM_Customer_Account__c/fields/Default_Rate_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Default_Rate_Schedule__c</fullName>
    <label>Default Rate Schedule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>