force-app/main/default/objects/IM_Customer_Account__c/fields/DM_BA_identifier__c.field-meta.xml
<CustomField>
    <fullName>DM_BA_identifier__c</fullName>
    <description>External ID field for data migration</description>
    <externalId>true</externalId>
    <label>DM_BA_identifier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>