force-app/main/default/objects/IM_Customer_Account__c/fields/Do_Not_Update_Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Update_Parent_Account__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Do Not Update Parent Account</label>
    <type>Checkbox</type>
</CustomField>