force-app/main/default/objects/IM_Customer_Account__c/fields/Early_Warning_View_Score__c.field-meta.xml
<CustomField>
    <fullName>Early_Warning_View_Score__c</fullName>
    <description>updated by field update from the Early Warning View score field on the At Risk Assessment</description>
    <label>Early Warning View Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>