force-app/main/default/objects/IM_Customer_Account__c/fields/Exclude_from_M2__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_M2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from M2/M4</label>
    <type>Checkbox</type>
</CustomField>