force-app/main/default/objects/IM_Customer_Account__c/fields/Geo_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Geo_Segmentation__c</fullName>
    <formula>if (

OR( ISPICKVAL( Source_System__c , &apos;Netsuite&apos;), 
ISPICKVAL (Source_System__c , &apos;SB NA&apos;), 
ISPICKVAL (Source_System__c , &apos;Jaguar&apos;), 
ISPICKVAL(Source_System__c , &apos;SKP NA&apos;), 
ISPICKVAL(Source_System__c , &apos;Other NA&apos;), 
ISPICKVAL (Source_System__c , &apos;ESS&apos;) ), 

&quot;NA&quot;, &quot;Intl&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geo Segmentation</label>
    <type>Text</type>
</CustomField>