force-app/main/default/objects/IM_Customer_Account__c/fields/Highest_Revenue_Cust_Act_on_Rate_Table__c.field-meta.xml
<CustomField>
    <fullName>Highest_Revenue_Cust_Act_on_Rate_Table__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This customer account has the most billings of customer accounts associated to its rate table. This account will be used for renewal opty and for assignment.</inlineHelpText>
    <label>Highest Revenue Cust Act on Rate Table</label>
    <type>Checkbox</type>
</CustomField>