force-app/main/default/objects/IM_Customer_Account__c/fields/IM_Account__c.field-meta.xml
<CustomField>
    <fullName>IM_Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Accounts</relationshipLabel>
    <relationshipName>Customer_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>