force-app/main/default/objects/IM_Customer_Account__c/fields/IM_Account_Formula__c.field-meta.xml
<CustomField>
    <fullName>IM_Account_Formula__c</fullName>
    <description>IF parent exists   
   THEN populate parent DUNS# if it is not blank, otherwise parent External Id
      ELSE otherwise leave blank</description>
    <formula>/* If parent exists */
IF(LEN( IM_Account__c )&gt;0, 
   
   /*populate parent DUNS# if it is not blank, otherwise parent External Id*/
   IF(LEN(IM_Account__r.IM_DUNS_Nbr_Formula__c)&gt;0, IM_Account__r.IM_DUNS_Nbr_Formula__c, IM_Account__r.IM_External_ID__c), 

     /*otherwise leave blank*/
     &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account (Formula)</label>
    <type>Text</type>
</CustomField>