force-app/main/default/objects/IM_Customer_Account__c/fields/IM_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>IM_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Accounts_AM</relationshipName>
    <type>Lookup</type>
</CustomField>