force-app/main/default/objects/IM_Customer_Account__c/fields/IM_At_Risk_Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>IM_At_Risk_Annual_Value__c</fullName>
    <description>The Annual Value at risk for the customer account.</description>
    <inlineHelpText>The Annual Value at risk for the customer account</inlineHelpText>
    <label>At Risk Annual Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>