force-app/main/default/objects/IM_Customer_Account__c/fields/IM_At_Risk_Entered_Date__c.field-meta.xml
<CustomField>
    <fullName>IM_At_Risk_Entered_Date__c</fullName>
    <label>At Risk Entered Date</label>
    <type>Date</type>
</CustomField>