force-app/main/default/objects/IM_Customer_Account__c/fields/IM_Billing_Dollar_Report__c.field-meta.xml
<CustomField>
    <fullName>IM_Billing_Dollar_Report__c</fullName>
    <description>This is used for a SFDC Report - it will be hidden from the Page Layout.  It will be displayed on reports.</description>
    <formula>HYPERLINK(&quot;http://businessintelligence/businessobjects/Enterprise115/InfoView/viewrpt.cwr?apsuser=siebel_proxy&amp;apspassword=$iebel_imp@ct&amp;apsauthtype=secEnterprise&amp;id=315861&amp;promptex0=&quot; &amp;  IM_Oracle_ID__c, &quot;Billing Dollar Summary Report&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Dollar Summary Report</label>
    <type>Text</type>
</CustomField>